@@ -44,7 +44,7 @@ Port                       21
 # In some cases you have to specify passive ports range to by-pass
 # firewall limitations. Ephemeral ports can be used for that, but
 # feel free to use a more narrow range.
-#PassivePorts               49152 65534
+PassivePorts               {FTPD_PASSIVE_PORT_RANGE}
 
 # To prevent DoS attacks, set the maximum number of child processes
 # to 30.  If you need to allow more than 30 concurrent connections
@@ -102,18 +102,6 @@ Group                      nogroup
 <IfModule !mod_tls.c>
   LoadModule               mod_tls.c
 </IfModule>
-
-# SSL via TLS
-{SSL}<IfModule mod_tls.c>
-{SSL}  TLSEngine                on
-{SSL}  TLSRequired              off
-{SSL}  TLSLog                   /var/log/proftpd/ftp_ssl.log
-{SSL}  TLSProtocol              TLSv1
-{SSL}  TLSOptions               {TLSOPTIONS}
-{SSL}  TLSRSACertificateFile    {CONF_DIR}/{CERTIFICATE}.pem
-{SSL}  TLSRSACertificateKeyFile {CONF_DIR}/{CERTIFICATE}.pem
-{SSL}  TLSVerifyClient          off
-{SSL}</IfModule>
 
 # i-MSCP Quota management
 <IfModule mod_quotatab.c>
